# memcache-proto

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: lib.rs  response.rs
src/binary/: mod.rs
